@@ -1,3 +1,8 @@
+2015-03-14  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/indices.c (next_index_match) <substring search>: Find 
+	non-case-matching initial matches.
+
 2015-03-13  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* info/indices.c (index_initial): New variable.
